--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^1.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
